<resources>
    <string name="app_name">Builder View</string>
    <string name="author">Sebastian Leonel Dipietro</string>

    <string-array name="wall_array">
        <item>Hueco 8cm</item>
        <item>Hueco 12cm</item>
        <item>Comun 15cm</item>
        <item>Hueco 18cm</item>
    </string-array>

    <string-array name="sheet_array">
        <item>Chapa acanalada</item>
        <item>Chapa trapezoidal</item>
    </string-array>
    <string-array name="plaster_array">
        <item>Revoque grueso</item>
        <item>Revoque fino</item>
    </string-array>

    <string-array name="flat_array">
        <item>Ceramica 25x25cm</item>
        <item>Ceramica 40x40cm</item>
        <item>Porcelato 60x60cm</item>
        <item>Porcelato 60x120cm</item>
    </string-array>

    <string-array name="structure_array">
        <item>Hierro de 8mm</item>
        <item>Hierro de 10mm</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_materials">Materiales</string>
    <string name="menu_providers">Corralones</string>
    <string name="menu_more_options">Mas</string>
    <string name="menu_settings">Configuracion</string>
    <string name="menu_info">Acerca de</string>
    <string name="menu_account_options">Cuenta</string>
    <string name="menu_logout">Cerrar sesion</string>
    <string name="about_information">BuilderView es una aplicacion android para asistencia a la construccion (computo y presupuesto) realizada en android studio Java. Actualmente BuilderView se encuentra en fase de desarrollo y una version temprana</string>


</resources>